<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.drill</groupId>
   <artifactId>test</artifactId>
   <packaging>pom</packaging>
   <version>1.0.0-SNAPSHOT</version>
   <modules>
      <module>framework</module>
   </modules>
   <repositories>
      <repository>
         <id>pentaho</id>
         <name>Pentaho</name>
         <url>http://repo.pentaho.org/artifactory/repo</url>
         <layout>default</layout>
         <releases>
            <enabled>true</enabled>
            <updatePolicy>daily</updatePolicy>
            <checksumPolicy>warn</checksumPolicy>
         </releases>
         <snapshots>
            <enabled>true</enabled>
         </snapshots>
      </repository>
   </repositories>
   <properties>
      <testng.version>6.4</testng.version>
      <log4j.version>1.2.17</log4j.version>
      <json.version>20090211</json.version>
      <jsontools.version>1.7</jsontools.version>
      <surefireoutputDir>${basedir}/../surefire-reports</surefireoutputDir>
      <google.common.version>16.0.1</google.common.version>
      <drill.version>${env.DRILL_VERSION}</drill.version>
      <hadoop.version>${env.HADOOP_VERSION}</hadoop.version>
      <runtimeDepenencies>${env.DRILL_HOME}/conf</runtimeDepenencies>
      <apache-httpcomponents.version>4.1.1</apache-httpcomponents.version>
   </properties>
   <dependencies>
      <dependency>
         <groupId>xerces</groupId>
         <artifactId>xercesImpl</artifactId>
         <version>2.8.0</version>
      </dependency>
      <dependency>
         <groupId>org.apache.zookeeper</groupId>
         <artifactId>zookeeper</artifactId>
         <version>3.4.6</version>
      </dependency>
      <dependency>
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
         <version>${log4j.version}</version>
      </dependency>
      <dependency>
         <groupId>log4j</groupId>
         <artifactId>apache-log4j-extras</artifactId>
         <version>${log4j.version}</version>
      </dependency>
      <dependency>
         <groupId>org.json</groupId>
         <artifactId>json</artifactId>
         <version>${json.version}</version>
      </dependency>
      <dependency>
         <groupId>com.sdicons.jsontools</groupId>
         <artifactId>jsontools-core</artifactId>
         <version>${jsontools.version}</version>
      </dependency>
      <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
         <version>${google.common.version}</version>
      </dependency>
      <dependency>
         <groupId>org.apache.hadoop</groupId>
         <artifactId>hadoop-core</artifactId>
         <version>${hadoop.version}</version>
         <exclusions>
            <exclusion>
               <groupId>org.slf4j</groupId>
               <artifactId>slf4j-api</artifactId>
            </exclusion>
            <exclusion>
               <groupId>org.slf4j</groupId>
               <artifactId>slf4j-log4j12</artifactId>
            </exclusion>
            <exclusion>
               <groupId>org.codehaus.jackson</groupId>
               <artifactId>jackson-mapper-asl</artifactId>
            </exclusion>
            <exclusion>
               <groupId>com.sun.jersey</groupId>
               <artifactId>jersey-json</artifactId>
            </exclusion>
         </exclusions>
      </dependency>
      <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
         <version>${apache-httpcomponents.version}</version>
      </dependency>
      <dependency>
         <groupId>org.apache.drill.exec</groupId>
         <artifactId>drill-jdbc-all</artifactId>
         <version>${drill.version}</version>
         <systemPath>${env.DRILL_HOME}/jars/jdbc-driver/drill-jdbc-all-${drill.version}.jar</systemPath>
         <scope>system</scope>
      </dependency>
      <dependency>
         <artifactId>jcommander</artifactId>
         <version>1.30</version>
         <groupId>com.beust</groupId>
      </dependency>
      <dependency>
         <groupId>com.fasterxml.jackson.jaxrs</groupId>
         <artifactId>jackson-jaxrs-json-provider</artifactId>
         <version>2.4.3</version>
      </dependency>
      <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-core</artifactId>
         <version>2.4.3</version>
      </dependency>
      <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
         <version>2.4.3</version>
      </dependency>
      <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-annotations</artifactId>
         <version>2.4.3</version>
      </dependency>
   </dependencies>
   <build>
      <plugins>
         <plugin>
            <groupId>com.googlecode.maven-download-plugin</groupId>
            <artifactId>download-maven-plugin</artifactId>
            <version>1.2.0</version>
            <executions>
               <execution>
                  <id>install-complexga100k-tgz-json</id>
                  <phase>prepare-package</phase>
                  <goals>
                     <goal>wget</goal>
                  </goals>
                  <configuration>
                     <url>http://apache-drill.s3.amazonaws.com/files/complexga100k.json.tgz</url>
                     <outputFileName>complexga100k.json.tgz</outputFileName>
                     <unpack>true</unpack>
                     <outputDirectory>${project.basedir}/resources/Datasources/complex/json</outputDirectory>
                  </configuration>
               </execution>
               <execution>
                  <id>install-complex-tgz-json</id>
                  <phase>prepare-package</phase>
                  <goals>
                     <goal>wget</goal>
                  </goals>
                  <configuration>
                     <url>http://apache-drill.s3.amazonaws.com/files/complex.json.tgz</url>
                     <outputFileName>complex.json.tgz</outputFileName>
                     <unpack>true</unpack>
                     <outputDirectory>${project.basedir}/resources/Datasources/complex/json</outputDirectory>
                  </configuration>
               </execution>
               <execution>
                  <id>install-mondrian-tgz-parquet</id>
                  <phase>prepare-package</phase>
                  <goals>
                     <goal>wget</goal>
                  </goals>
                  <configuration>
                     <url>http://apache-drill.s3.amazonaws.com/files/mondrian_parquet.tgz</url>
                     <outputFileName>mondrian_parquet.tgz</outputFileName>
                     <unpack>true</unpack>
                     <outputDirectory>${project.basedir}/resources/Datasources/mondrian</outputDirectory>
                  </configuration>
               </execution>
               <execution>
                  <id>func-failing-widestrings-large</id>
                  <phase>prepare-package</phase>
                  <goals>
                     <goal>wget</goal>
                  </goals>
                  <configuration>
                     <url>https://s3.amazonaws.com/apache-drill/files/func-failing-widestrings-large.tgz</url>
                     <outputFileName>func-failing-widestrings-large.tgz</outputFileName>
                     <unpack>true</unpack>
                     <outputDirectory>${project.basedir}/resources/Functional/Failing/data-shapes/wide-columns/5000/1000rows/parquet/</outputDirectory>
                  </configuration>
               </execution>
               <execution>
                  <id>func-passing-widestrings-large</id>
                  <phase>prepare-package</phase>
                  <goals>
                     <goal>wget</goal>
                  </goals>
                  <configuration>
                     <url>https://s3.amazonaws.com/apache-drill/files/func-passing-widestrings-large.tgz</url>
                     <outputFileName>func-passing-widestrings-large.tgz</outputFileName>
                     <unpack>true</unpack>
                     <outputDirectory>${project.basedir}/resources/Functional/Passing/data-shapes/wide-columns/5000/1000rows/parquet/</outputDirectory>
                  </configuration>
               </execution>
               <execution>
                  <id>flatten-operators-100000rows</id>
                  <phase>prepare-package</phase>
                  <goals>
                     <goal>wget</goal>
                  </goals>
                  <configuration>
                     <url>https://s3.amazonaws.com/apache-drill/files/flatten-operators-100000rows.tgz</url>
                     <outputFileName>flatten-operators-100000rows.tgz</outputFileName>
                     <unpack>true</unpack>
                     <outputDirectory>${project.basedir}/resources/Datasources/flatten_operators/</outputDirectory>
                  </configuration>
               </execution>
               <execution>
                  <id>func-passing-flatten-operators-large</id>
                  <phase>prepare-package</phase>
                  <goals>
                     <goal>wget</goal>
                  </goals>
                  <configuration>
                     <url>https://s3.amazonaws.com/apache-drill/files/func-passing-flatten-operators-large.tgz</url>
                     <outputFileName>func-passing-flatten-operators-large.tgz</outputFileName>
                     <unpack>true</unpack>
                     <outputDirectory>${project.basedir}/resources/Functional/Passing/flatten_operators/100000rows/</outputDirectory>
                  </configuration>
               </execution>
               <execution>
                  <id>func-failing-flatten-operators-large</id>
                  <phase>prepare-package</phase>
                  <goals>
                     <goal>wget</goal>
                  </goals>
                  <configuration>
                     <url>https://s3.amazonaws.com/apache-drill/files/func-failing-flatten-operators-large.tgz</url>
                     <outputFileName>func-failing-flatten-operators-large.tgz</outputFileName>
                     <unpack>true</unpack>
                     <outputDirectory>${project.basedir}/resources/Functional/Failing/flatten_operators/100000rows/</outputDirectory>
                  </configuration>
               </execution>
               <execution>
                  <id>tpcds_sf1_parquet</id>
                  <phase>prepare-package</phase>
                  <goals>
                     <goal>wget</goal>
                  </goals>
                  <configuration>
                     <url>https://s3.amazonaws.com/apache-drill/files/tpcds/tpcds_sf1_parquet.tgz</url>
                     <outputFileName>tpcds_sf1_parquet.tgz</outputFileName>
                     <unpack>true</unpack>
                     <outputDirectory>${project.basedir}/resources/Datasources/parquet/tpcds_sf1</outputDirectory>
                  </configuration>
               </execution>
               <execution>
                  <id>tpcds_text_sf1</id>
                  <phase>prepare-package</phase>
                  <goals>
                     <goal>wget</goal>
                  </goals>
                  <configuration>
                     <url>https://s3.amazonaws.com/apache-drill/files/tpcds_text_sf1.tgz</url>
                     <outputFileName>tpcds_text_sf1.tgz</outputFileName>
                     <unpack>true</unpack>
                     <outputDirectory>${project.basedir}/resources/Datasources/text/tpcds/sf1</outputDirectory>
                  </configuration>
               </execution>
               <execution>
                  <id>json_fed</id>
                  <phase>prepare-package</phase>
                  <goals>
                     <goal>wget</goal>
                  </goals>
                  <configuration>
                     <url>https://s3.amazonaws.com/apache-drill/files/fed.tgz</url>
                     <outputFileName>json_fed.tgz</outputFileName>
                     <unpack>true</unpack>
                     <outputDirectory>${project.basedir}/resources/Datasources/json/fed</outputDirectory>
                  </configuration>
               </execution>
               <execution>
                  <id>json_factbook</id>
                  <phase>prepare-package</phase>
                  <goals>
                     <goal>wget</goal>
                  </goals>
                  <configuration>
                     <url>https://s3.amazonaws.com/apache-drill/files/factbook.tgz</url>
                     <outputFileName>json_factbook.tgz</outputFileName>
                     <unpack>true</unpack>
                     <outputDirectory>${project.basedir}/resources/Datasources/json/factbook</outputDirectory>
                  </configuration>
               </execution>
               <execution>
                  <id>json_studio</id>
                  <phase>prepare-package</phase>
                  <goals>
                     <goal>wget</goal>
                  </goals>
                  <configuration>
                     <url>https://s3.amazonaws.com/apache-drill/files/studio.tgz</url>
                     <outputFileName>json_studio.tgz</outputFileName>
                     <unpack>true</unpack>
                     <outputDirectory>${project.basedir}/resources/Datasources/json/studio</outputDirectory>
                  </configuration>
               </execution>
            </executions>
         </plugin>
      </plugins>
      <pluginManagement>
         <plugins>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
               <version>2.8.1</version>
               <configuration>
                  <skip>${maven.test.skip}</skip>
                  <argLine>-Xmx4G -XX:MaxPermSize=256m -XX:MaxDirectMemorySize=32G -Dzookeeper.sasl.client=false -Djava.security.auth.login.config=/opt/mapr/conf/mapr.login.conf</argLine>
                  <additionalClasspathElements>
                     <additionalClasspathElement>${runtimeDepenencies}</additionalClasspathElement>
                  </additionalClasspathElements>
                  <reportsDirectory>${surefireoutputDir}/smoke/${project.artifactId}</reportsDirectory>
               </configuration>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-resources-plugin</artifactId>
               <version>2.6</version>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-clean-plugin</artifactId>
               <version>2.5</version>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
               <version>3.1</version>
               <configuration>
                  <source>1.7</source>
                  <target>1.7</target>
               </configuration>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-install-plugin</artifactId>
               <version>2.4</version>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-jar-plugin</artifactId>
               <version>2.4</version>
            </plugin>
         </plugins>
      </pluginManagement>
   </build>
</project>
